# sqlx-test

./: Cargo.toml  cats.sql  test.db
src/: main.rs
