[package]
name = "sqlx-test"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+github@nauk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
path = "../sqlx"
default_features = false
features = ["all", "runtime-async-std"]

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
anyhow = "1"
bigdecimal = "0.1"
num-bigint = "0.2"
