[package]
name = "sqlx-test"
version = "0.1.0"
authors = ["Julius de Bruijn <julius+github@nauk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx"
default_features = false
features = ["all", "runtime-tokio"]

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
tokio-postgres = "*"
anyhow = "1"
rusqlite = "0.23"
bytes = "0.5"
